engine.jj
/* engine.jj - Framework */ 
/* ========================================= */
options {
	STATIC = false;
}

/* ========================================= */
PARSER_BEGIN(Engine)
import java.io.*;
import java.util.*;
public class Engine {
	public static void main(String[] args) 
	throws ParseException, TokenMgrError, FileNotFoundException {
		Engine parser = new Engine(System.in);
		parser.Start();
	}
}	
PARSER_END(Engine)

/* ========================================= */
/* REGULAR EXPRESSIONS - PARSING */

SKIP : {" "}
SKIP : {"\t"}
TOKEN : {< #WHITESPACE : ["\t", " "] >}

TOKEN : {< EOL : "\n" | "\r" | "\r\n" >}
TOKEN : {< PLUS : "+" >}
TOKEN : {< NUMBER : ("-")? (<DIGITS> | <DIGITS> "." <DIGITS> | <DIGITS> "." | "." <DIGITS>) >}
TOKEN : {< #DIGITS : (["0"-"9"])+ >}

TOKEN : {< STRING : (<LETTER>)+ >} 
TOKEN : {< #LETTER : ["a"-"z","A"-"Z",".","_","-",","] >} 
TOKEN : {< COMMENT : "\\" >}

/* ========================================= */
/* FUNCTIONS - SEMANTIC ANALYZER */

void Start() throws NumberFormatException, FileNotFoundException :
{
	ArrayDeque<Object> cmd;
	Canvas c = new Canvas(500, 500, 255, 255, 255);
}
{
	(
		cmd = Command()
		<EOL>
		{ System.out.println(cmd); }	
	)*
	{ c.save("out.ppm"); }
	<EOF>
}

ArrayDeque<Object> Command() : 
{
	String cmd = "";
	ArrayDeque<Object> q = new ArrayDeque<Object>();
	double d;
	String s;
}
{
	cmd = TokenString() 
	{ q.add(cmd); }
	{
		if (cmd.equals("rotate")) {
		   s = TokenString();
		   q.add(s);
		}
	}
	(	
		d = TokenDouble()
		{ q.add(d); }
	)*
	{ return q; }
}

/* ========================================= */
/* FUNCTIONS - HELPERS */

String TokenString() :
{
	Token t;
}
{
	t = <STRING>
	{ return t.image; }
}

double TokenDouble() throws NumberFormatException : 
{
	Token t;
}
{
	t = <NUMBER>
	{ return Double.parseDouble( t.image ); }
}
